OAM-SAAS-Deployment-oamdev-dedicated-env/OAM-SAAS-Deployment-oamdev-dedicated-env/oam-base/deployment.yaml
---
# Zoo Keeper
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: oam-zk
spec:
  serviceName: zk-service
  replicas: 1
  selector:
    matchLabels:
      app: oam-zk
  template:
    metadata:
      labels:
        app: oam-zk
    spec:
      containers:
      - name: oam-zk
        imagePullPolicy: Always
        image: bitnami/zookeeper:3.8.0     
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
        ports:
        - containerPort: 2181
          name: client
        - containerPort: 2888
          name: server
        - containerPort: 3888
          name: leader-election          
---
# Drill 
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: oam-drill
spec:
  serviceName: oam-drill-service
  replicas: 1
  selector:
    matchLabels:
      app: oam-drill
  template:
    metadata:
      labels:
        app: oam-drill
    spec:
      containers:
      - name: oam-drill
        imagePullPolicy: Always
        image: infobeltinc/apache-drill:1.19.0  #agirish/drill:1.17.0 # smizy/apache-drill:1.16.0-alpine
        ports:
        - containerPort: 8047 
          name: http
        - containerPort: 31010
          name: userport
        - containerPort: 31011 
          name: controlport
        - containerPort: 31012
          name: dataport
        tty: true  
---
# OAM UI
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oam-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oam-ui
  template:
    metadata:
      labels:
        app: oam-ui
    spec:
      containers:      
      - name: oam-ui
        image: "997742452154.dkr.ecr.us-east-1.amazonaws.com/infobelt/oam-saas:4.52.9" #"997742452154.dkr.ecr.us-east-2.amazonaws.com/infobelt/isatest:4.51.250"
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8090
---
# OAM SERVER            
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oam-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oam-server  
  template:
    metadata:
      labels:
        app: oam-server
    spec:
      containers:  
      - name: oam-server
        image: "997742452154.dkr.ecr.us-east-1.amazonaws.com/infobelt/oam-saas:4.52.9"  #"997742452154.dkr.ecr.us-east-2.amazonaws.com/infobelt/isatest:4.51.250"
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
        volumeMounts:
          - name: elastic-certificates
            mountPath: /appData/oam/certs
      terminationGracePeriodSeconds: 10
      volumes:
        - name: elastic-certificates
          emptyDir: {}
---
# OAM Wokers
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: oam-workers
spec:
  serviceName: oam-worker-service
  selector:
    matchLabels: 
      app: oam-workers
  replicas: 1
  template:
    metadata:
      labels:
        app: oam-workers
    spec:
      containers:
      - name: oam-worker
        image: "997742452154.dkr.ecr.us-east-1.amazonaws.com/infobelt/oam-saas:4.52.9"  #"997742452154.dkr.ecr.us-east-2.amazonaws.com/infobelt/isatest:4.51.250"
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
          - containerPort: 8080
        volumeMounts:
          - name: elastic-certificates
            mountPath: /appData/oam/certs
      terminationGracePeriodSeconds: 10
      volumes:
        - name: elastic-certificates
          emptyDir: {}
---
# Elastic Search 7.17.2
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oam-elastic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oam-elastic
  template:
    metadata:
      labels:
        app: oam-elastic
    spec:
      containers:
      - name: elastic
        image: docker.elastic.co/elasticsearch/elasticsearch:7.17.2
        securityContext:
          capabilities:
          runAsNonRoot: true
          runAsUser: 1000
        volumeMounts:
          - name: elastic-certificates
            mountPath: /usr/share/elasticsearch/config/certs
          - name: config
            mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
            readOnly: true
            subPath: elasticsearch.yml
      volumes:
        - name:  config
          configMap:
            name: myeschart7172-config # update the configmap name as per chart version and name
        - name: elastic-certificates
          emptyDir: {}      
      imagePullSecrets: []
      securityContext:
        fsGroup: 1000
---
