OAM-SAAS-Deployment-oamdev-dedicated-env/OAM-SAAS-Deployment-oamdev-dedicated-env/oam-base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oam-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/tls-acme: "true"
    nginx.org/proxy-connect-timeout: "1200"
    nginx.org/proxy-read-timeout: "1200"
    nginx.org/proxy-send-timeout: "1200"
    nginx.org/client-body-timeout: "1200"
    nginx.org/client-header-timeout: "1200"
    nginx.org/keepalive_timeout: "1200"
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
    nginx.org/client-max-body-size: "1024m"
    nginx.org/proxy-max-temp-file-size: "1024m"
spec:
  rules:
    - host: oamdev.infobelt.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oam-ui
                port:
                  number: 80
    - host: drill.oamdev.infobelt.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oam-drill-service
                port:
                  number: 8047
  tls:
  - hosts:
    - 'oamdev.infobelt.net'
    secretName: oamdev-infobelt-net
  - hosts:
    - 'drill.oamdev.infobelt.net'
    secretName: drill-oamdev-infobelt-net
